[package]
name = "antichannelbot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { features = ["macros", "auto-send", "webhooks-axum"], git = "https://github.com/teloxide/teloxide.git", branch = "dev" }
url = "2.2.2"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
